MediumDec Formula now supports both Reference and By-Value maps for evaluation (recent changes not tested yet)

--- a/ExprFormulaTester/ExprFormulaTester.vcxproj
+++ b/ExprFormulaTester/ExprFormulaTester.vcxproj
@@ -169,9 +169,10 @@
     <ClInclude Include="..\GlobalCode\Databases\CustomOrderedDictionary.h" />
     <ClInclude Include="..\GlobalCode\Databases\DataDictionary.h" />
     <ClInclude Include="..\GlobalCode\Databases\IndexedDictionary.h" />
+    <ClInclude Include="..\GlobalCode\Databases\MediumDecFormula.hpp" />
     <ClInclude Include="..\GlobalCode\DLLAPI.h" />
     <ClInclude Include="..\GlobalCode\tsl\ordered_map.h" />
-    <ClInclude Include="..\GlobalCode\VariableConversionFunctions\VariableConversionFunctions.h" />
+    <ClInclude Include="..\GlobalCode\OtherFunctions\VariableConversionFunctions.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
