Reworked Formula Code(compiles and will run but formula stuff fails when used right now)
-Program vector subarray error on Evaluate and fails to display and/or store formula correctly.

--- a/ExprFormulaTester/ExprFormulaTester.vcxproj.filters
+++ b/ExprFormulaTester/ExprFormulaTester.vcxproj.filters
@@ -80,5 +80,11 @@
     <ClInclude Include="..\GlobalCode\OtherFunctions\VariableConversionFunctions.h">
       <Filter>Header Files\OtherFunctions</Filter>
     </ClInclude>
+    <ClInclude Include="..\GlobalCode\Databases\VariableFormula.hpp">
+      <Filter>Header Files\Databases</Filter>
+    </ClInclude>
+    <ClInclude Include="..\GlobalCode\Databases\MediumDecFormula.hpp">
+      <Filter>Header Files\Databases</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
