--- a/ExprFormulaTester/ExprFormulaTester.vcxproj
+++ b/ExprFormulaTester/ExprFormulaTester.vcxproj
@@ -168,6 +168,8 @@
     <ClInclude Include="..\GlobalCode\Databases\CustomOrderedDictionary.h" />
     <ClInclude Include="..\GlobalCode\Databases\DataDictionary.h" />
     <ClInclude Include="..\GlobalCode\Databases\IndexedDictionary.h" />
+    <ClInclude Include="..\GlobalCode\Databases\MediumDecFormula.hpp" />
+    <ClInclude Include="..\GlobalCode\Databases\VariableFormula.hpp" />
     <ClInclude Include="..\GlobalCode\DLLAPI.h" />
     <ClInclude Include="..\GlobalCode\tsl\ordered_map.h" />
     <ClInclude Include="..\GlobalCode\OtherFunctions\VariableConversionFunctions.h" />
