--- a/GlobalCode/BlazesGlobalCode.vcxproj
+++ b/GlobalCode/BlazesGlobalCode.vcxproj
@@ -222,12 +222,15 @@
     <ClInclude Include="Databases\CustomDictionary.h" />
     <ClInclude Include="Databases\CustomOrderedDictionary.h" />
     <ClInclude Include="Databases\DataDictionary.h" />
+    <ClInclude Include="Databases\DoubleFormula.hpp" />
+    <ClInclude Include="Databases\ElementType.hpp" />
     <ClInclude Include="Databases\IndexedDictionary.h" />
     <ClInclude Include="Databases\IndexedIniData.h" />
     <ClInclude Include="Databases\IniDataV2.h" />
-    <ClInclude Include="Databases\IntFormula.h" />
+    <ClInclude Include="Databases\IntFormula.hpp" />
     <ClInclude Include="Databases\MediumDecFormula.hpp" />
     <ClInclude Include="Databases\OrderedIndexDictionary.h" />
+    <ClInclude Include="Databases\VariableFormula.hpp" />
     <ClInclude Include="OtherFunctions\MiscFunctions.h" />
     <ClInclude Include="NodeTrees\LooseNodeTreeTemplate.h" />
     <ClInclude Include="NodeTrees\TagNodeTreeTemplate.h" />
