Some fixes to formula stuff(though still doesn't work)
-Moved old ExpFormula code into BlazesRusCode namespace

--- a/GlobalCode/BlazesGlobalCode.vcxproj
+++ b/GlobalCode/BlazesGlobalCode.vcxproj
@@ -224,6 +224,7 @@
     <ClInclude Include="Databases\DataDictionary.h" />
     <ClInclude Include="Databases\DoubleFormula.hpp" />
     <ClInclude Include="Databases\ElementType.hpp" />
+    <ClInclude Include="Databases\ExprFormula.h" />
     <ClInclude Include="Databases\IndexedDictionary.h" />
     <ClInclude Include="Databases\IndexedIniData.h" />
     <ClInclude Include="Databases\IniDataV2.h" />
