--- a/GlobalCode/BlazesGlobalCode.vcxproj.filters
+++ b/GlobalCode/BlazesGlobalCode.vcxproj.filters
@@ -162,6 +162,9 @@
     <ClInclude Include="Databases\IntFormula.hpp">
       <Filter>Header Files\Databases</Filter>
     </ClInclude>
+    <ClInclude Include="Databases\ExprFormula.h">
+      <Filter>Header Files\Databases</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NodeTrees\TagNodeTreeTemplate.cpp">
