--- a/GlobalCode/BlazesGlobalCode.vcxproj.filters
+++ b/GlobalCode/BlazesGlobalCode.vcxproj.filters
@@ -174,6 +174,9 @@
     <ClInclude Include="Databases\BuiltinFormula.hpp">
       <Filter>Header Files\Databases</Filter>
     </ClInclude>
+    <ClInclude Include="AltNum\MixedDec.hpp">
+      <Filter>Header Files\AltNum</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NodeTrees\TagNodeTreeTemplate.cpp">
